--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,5 @@
 @import "variables.scss";
+$nav-img-path: "/modul-2/MyProject/src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg";
 
 body {
   width: 100vw;
@@ -17,7 +18,7 @@ body {
   nav {
     grid-area: navig;
     height: 10%;
-    background-image: url("/modul-2/MyProject/src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg");
+    background-image: url('#{$nav-img-path}');
     background-size: cover;
     display: flex;
     align-items: center;
