--- a/src/css/index-style.css
+++ b/src/css/index-style.css
@@ -17,6 +17,8 @@ body {
 body nav {
   grid-area: navig;
   height: 10%;
+  background-image: url("./src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg");
+  background-size: cover;
   display: flex;
   align-items: center;
   position: fixed;
@@ -216,7 +218,7 @@ body aside .text {
 }
 body footer {
   grid-area: footer;
-  background-image: url("/modul-2/zuhause/src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg");
+  background-image: url("./src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg");
   background-size: cover;
   display: flex;
   align-items: center;
