--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,7 +17,7 @@ body {
   nav {
     grid-area: navig;
     height: 10%;
-    background-image: url("./src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg");
+    background-image: url("../img/anton-darius-wRMvOZ1CufQ-unsplash.jpg");
     background-size: cover;
     display: flex;
     align-items: center;
