--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -157,7 +157,7 @@ body {
 // main
   main {
     grid-area: main;
-    
+    padding: 2.5em;
 
     h2 {
       margin: 0.5em 0;
@@ -167,7 +167,7 @@ body {
     p {
       line-height: 1.75em;
       color: map-get($map: $colors, $key: cal-poly-green);
-      margin-bottom: 2.5em;
+      margin-bottom: 0.5em;
     }
   }
 
